--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "serve": "grunt serve",
+    "build": "grunt build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,7 +13,7 @@
     "url": "git+https://github.com/makotot/monotype.git"
   },
   "author": "makotot",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/makotot/monotype/issues"
   },
@@ -21,6 +23,7 @@
     "babel-eslint": "^4.1.3",
     "babel-preset-es2015": "^6.0.15",
     "babelify": "^7.1.0",
+    "browserify": "^12.0.1",
     "cssnano": "^3.3.2",
     "deglobalify": "^0.2.0",
     "eslint-config-makotot": "0.0.4",
@@ -29,12 +32,12 @@
     "grunt-browser-sync": "^2.1.3",
     "grunt-browserify": "^4.0.1",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-uglify": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^17.3.1",
     "grunt-postcss": "^0.7.0",
     "grunt-sass": "^1.1.0",
     "jit-grunt": "^0.9.1",
+    "minifyify": "^7.1.0",
     "postcss-normalize": "^0.1.1",
     "postcss-reporter": "^1.3.0",
     "stylelint": "^2.0.0",
